fix z-index of slideshow

--- a/assets/Stylesheets/media.css
+++ b/assets/Stylesheets/media.css
@@ -146,6 +146,7 @@ Media
     
     div.slideshow-container {
         position: relative;
+        z-index: -1;
     }
     div.dots {
         text-align: center;
